--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -11,6 +11,23 @@
 <h5>Class:</h5>
 <p>{{ class }}</p>
 
+
+<a href="{% url 'main:create_news' %}">
+  <button>+ Add News</button>
+</a>
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+<h5>Sesi terakhir login: {{ last_login }}</h5>
+<hr>
+<!-- Tambahkan kode ini -->
+<a href="?filter=all">
+    <button type="button">All Articles</button>
+</a>
+<a href="?filter=my">
+    <button type="button">My Articles</button>
+</a> 
+
 <a href="{% url 'main:create_news' %}">
   <button>+ Add News</button>
 </a>
@@ -44,4 +61,9 @@
 {% endfor %}
 
 {% endif %}
+
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 {% endblock content %}
